[package]
name = "lsonar"
version = "0.2.4"
edition = "2024"
authors = ["reloginn <nikita.malina23@gmail.com>"]
description = "Lua 5.3 pattern engine, fully compatible with the original Lua 5.3 engine"
license = "MIT"
repository = "https://github.com/reloginn/lsonar"

[dependencies]

[features]
default = ["1-based"]
1-based = []
0-based = []
